# CppTemplate

./: .clang-format  CMakeLists.txt  README.md  conanfile.txt
cmake/: SetCompilerWarnings.cmake
src/: main.cpp
